tests/samples/positive/modules/module_name_collision.ax
module module_name_collision;

import collide.a;

fn helper(value: i32) -> i32 {
    return value + 100;
}

fn main() -> i32 {
    return helper(0) - 100;
}
